<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_activity"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        android:padding="@dimen/padding_activity" >

        <TextView
            style="@style/mTextYellowMedium"
            android:text="@string/dialog_title_dialog_location_over_network" />

        <TextView
            style="@style/mTextWhite"
            android:text="@string/dialog_msg_dialog_location_over_network" />

        <CheckBox
            android:id="@+id/cbDontShowNetworkLocatingDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/dialog_btn_dont_show_dialog_anymore" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_activity_half" >

            <Button
                android:id="@+id/bSetNetworkLocating"
                style="@style/mButton"
                android:layout_weight="1"
                android:text="@string/dialog_btn_set" />

            <Button
                android:id="@+id/bCancelNetworkLocatingDialog"
                style="@style/mButton"
                android:layout_weight="1"
                android:text="@string/dialog_btn_cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>